# napari-spofi

./: LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
src/napari_spofi/: __init__.py  _annotation.py  _data_handler.py  _header.py  _prediction.py  _training.py  _widget.py  napari.yaml
src/napari_spofi/_tests/: test_widget.py
src/napari_spofi/resources/: spofi_defaults.json  styles.qss
src/napari_spofi/spofi_utils/: directory_maker.py  normalizer.py  prediction_utils.py  training_utils.py
