[distutils]
index-servers =
    pypi
    testpypi


[metadata]
name = napari-spofi
version = attr: napari_spofi.__version__
description = napari plugin to interactively train and test a StarDist model
long_description = file: README.md
long_description_content_type = text/markdown

author = Christian Schulze
author_email = drchrisch@gmail.com

project_urls =
	Bug Tracker = https://github.com/drchrisch/napari-spofi/issues
	Documentation = https://github.com/drchrisch/napari-spofi#README.md
	Source Code = https://github.com/drchrisch/napari-spofi
	User Support = https://github.com/drchrisch/napari-spofi/issues

license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
	Topic :: Scientific/Engineering :: Visualization


[options]
packages = find:
install_requires =
    numpy
	pandas
    magicgui
    qtpy
    scikit-image
    pyclesperanto
    tensorflow
    stardist
python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-spofi = napari_spofi:napari.yaml

[options.extras_require]
testing =
    tox
    napari
    pyqt5


[options.package_data]
napari_spofi = 
	*.yaml
napari_spofi.resources =
	*.qss
	*.json
